@@ -2,6 +2,8 @@ Revision history for Perl extension Shodo
 
 {{$NEXT}}
 
+    - move Shodo::Test::JSONRPC to "Test::Shodo::JSONRPC"
+
 0.07 2013-11-29T15:48:57Z
 
     - add '?' to uri if it has query, thanks to hisaichi5518
